--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ footer a{
 #contenido{
     text-align: center;
 }
-#contenido h4{
+#contenido .h4_reloj{
     text-align: center;
     font-size: 24px;
     text-transform: uppercase;
